foundation-objs/main/default/objects/Field_Mapping_SF_JIRA__mdt/Field_Mapping_SF_JIRA__mdt.object-meta.xml
<CustomObject>
    <label>Field Mapping SF&lt;&gt;JIRA</label>
    <pluralLabel>Field Mapping SF&lt;&gt;JIRA</pluralLabel>
</CustomObject>