foundation-objs/main/default/objects/Field_Mapping_SF_JIRA__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>