foundation-objs/main/default/objects/Field_Mapping_SF_JIRA__mdt/fields/Is_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Value?</label>
    <type>Checkbox</type>
</CustomField>