foundation-objs/main/default/objects/Field_Mapping_SF_JIRA__mdt/fields/Is_Visiable__c.field-meta.xml
<CustomField>
    <fullName>Is_Visiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visiable?</label>
    <type>Checkbox</type>
</CustomField>