foundation-objs/main/default/objects/Field_Mapping_SF_JIRA__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>