foundation-objs/main/default/objects/Field_Mapping_SF_JIRA__mdt/fields/Team_Mapping_SF_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Team_Mapping_SF_JIRA__c</fullName>
    <label>Team Mapping SF&lt;&gt;JIRA</label>
    <referenceTo>Team_Mapping_SF_JIRA__mdt</referenceTo>
    <relationshipLabel>Field Mapping SF&lt;&gt;JIRA</relationshipLabel>
    <relationshipName>Field_Mapping_SF_JIRA</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>